crates/pg_syntax/tests/snapshots/postgres_regress/timestamptz@235.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '2011-03-27 03:00:01 Europe/Moscow'::timestamptz;"
---
SelectStmt@0..56
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..55
    TypeCast@7..55
      AConst@7..42
        Sconst@7..42 "'2011-03-27 03:00:01  ..."
      Typecast@42..44 "::"
      TypeName@44..55
        Ident@44..55 "timestamptz"
  Ascii59@55..56 ";"

